--- a/css/style.css
+++ b/css/style.css
@@ -82,11 +82,12 @@ body {
 .title::after {
   content: "";
   position: absolute;
-  width: 4px;
-  height: 50px;
+  width: 6px;
+  height: 56px;
   background-color: #00b2a0;
-  bottom: 18px;
-  /* right: -4px; */
+  bottom: 8px;
+  transform: rotate(35deg);
+  margin-left: 26px;
 }
 
 .header {
@@ -99,7 +100,6 @@ body {
 .header__top-inner {
   padding-top: 44px;
   display: flex;
-  /* justify-content: center; */
   align-items: center;
 }
 
@@ -202,45 +202,51 @@ body {
   width: 350px;
 }
 
-.expertise__item-sea {
+.expertise__item--sea {
   width: 220px;
-  margin-left: 66px;
+  margin-left: 72px;
+  margin-bottom: 19px;
   display: flex;
-  justify-content: center;
   align-items: center;
 }
 
-.expertise__item-airplan {
-  width: 184px;
-  margin-left: 84px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.expertise__item-wave {
-  width: 206px;
-  margin-left: 73px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.expertise__item-title {
-  text-align: center;
-  /* padding-;right: 74px */
-  line-height: 28px;
+.title__sea {
   font-weight: 400;
   font-size: 24px;
   line-height: 18px;
-  margin-bottom: 15px;
+  margin-left: 10px;
 }
 
-.expertise__item-text {
-  /* width: 350px; */
-  line-height: 18px;
-  padding-right: 20px;
+.expertise__item--airplan{
+  width: 184px;
+  margin-left: 84px;
+  margin-bottom: 10px;
+  display: flex;
+  align-items: center;
 }
+
+.title__airplan{
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 28px;
+  margin-left: 10px;
+}
+
+.expertise__item--wave{
+  width: 206px;
+  margin-left: 72px;
+  margin-bottom: 15px;
+  display: flex;
+  align-items: center;
+}
+
+.title__wave{
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 26px;
+  margin-left: 10px;
+}
+
 
 .expertise__inner {
   display: flex;
@@ -250,9 +256,6 @@ body {
   min-width: 346px;
   display: flex;
   flex-direction: column;
-  /* margin-top: 15px;
-  margin-right: 255px;
-  flex: none; */
 }
 
 .expertise__info-item {
@@ -260,35 +263,13 @@ body {
   flex-wrap: wrap;
   align-content: flex-end;
   margin-top: auto;
-
-  /* border-top: 2px solid #1d1d1d;
-  padding: 2px 0 28px;
-  line-height: 19px;
-  position: relative; */
 }
 
 .expertise__info-item span {
   margin-left: 10px;
   font-weight: 400;
   font-size: 24px;
-
-
-  /* display: block;
-  position: absolute;
-  right: 0;
-  top: 0;
-  margin-right: 7px; */
 }
-
-/* .expertise__info-item span::before {
-  content: "";
-  position: absolute;
-  height: 2px;
-  background-color: #f0f0f0;
-  right: -7px;
-  top: -2px;
-  width: 100%;
-} */
 
 .expertise__text {
   margin-left: 254px;
@@ -303,10 +284,7 @@ body {
   background-image: url('../images/magic-img.jpg');
   background-repeat: no-repeat;
   background-position: top right;
-  background-size: 50%;
-}
-
-.magic__inner {
+  background-size: 1150px 850px;
   padding: 200px 0 317px;
 }
 
@@ -318,3 +296,226 @@ body {
   max-width: 507px;
   margin-bottom: 30px;
 }
+
+.portfolio {
+  padding: 1px 0 198px;
+}
+
+.portfolio__title {
+  text-align: center;
+  margin-bottom: 212px;
+}
+
+.portfolio__content {
+  margin-bottom: 224px;
+}
+
+.portfolio__filter-btn {
+  margin-bottom: 50px;
+}
+
+.portfolio__btn {
+  background-color: transparent;
+  padding: 0;
+  border: none;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 18px;
+  letter-spacing: 0.6px;
+  text-transform: uppercase;
+  margin-right: 20px; 
+}
+
+.mixitup-control-active {
+  color: #00b2a0;
+}
+
+.portfolio__content-img {
+  margin-bottom: 50px;
+  display: grid;
+  gap: 40px;
+}
+
+.portfolio__item-img1 {
+  grid-column: 1 / 3;
+}
+
+.portfolio__item-img6 {
+  grid-column: 3 / 5;
+}
+
+.portfolio__item {
+  position: relative;
+}
+
+portfolio__item-link {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(51, 51, 51, 0.7);
+  opacity: 0;
+}
+
+.portfolio__item:hover .portfolio__item-link {
+  opacity: 0.7;
+}
+
+.portfolio__add {
+  display: block;
+  font-family: 'Roboto Condensed', sans-serif;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 18px;
+  text-align: center;
+  text-transform: uppercase;
+  padding-bottom: 200px;
+}
+
+.portfolio__add-btn {
+  background-color: #fff;
+  border: 1px solid #c4c4c4;
+  padding: 23px 91px 24px;
+}
+
+.blockquote {
+  text-align: center;
+  font-family: 'Roboto Condensed', sans-serif;
+  font-weight: 400;
+  font-size: 36px;
+  line-height: 40px;
+  background-color: #f8f8f8;
+  height: 200px;
+  margin-bottom: 203px;
+}
+
+.blockquote p {
+  padding-top: 81px;
+}
+
+.blockquote__author {
+  display: block;
+  font-style: italic;
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 18px;
+  color: #242121;
+  padding-left: 528px;
+}
+
+.portfolio__video {
+  background-image: url('../images/video-bg.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  height: 600px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 200px;
+}
+
+.portfolio__numbers {
+  display: flex;
+  justify-content: space-around;
+}
+.portfolio__numbers-item {
+  text-align: center;
+  font-weight: 700;
+  font-size: 64px;
+  color: #01353e;
+  margin-bottom: 5px;
+}
+
+.portfolio__numbers-item span {
+  font-family: 'Roboto Condensed', sans-serif;
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 18px;
+  display: block;
+}
+
+.slider-blog {
+  padding-bottom: 200px;
+}
+
+.slider-blog__item {
+  padding: 260px 0;
+  display: flex;
+  flex-direction: column;
+  margin-left: 600px;
+}
+
+.slider-blog__title {
+  margin-bottom: 229px;
+  text-align: center;
+}
+
+.slider-blog__bg {
+  background-image: url('../images/slider-bg.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+}
+
+.slider-blog__inner {
+  padding: 77px 0;
+}
+
+.slider-blog__item-title {
+  font-weight: 400;
+  font-size: 48px;
+  line-height: 56px;
+  color: #fff;
+  max-width: 600px;
+  display: inline-block;
+}
+
+.slider-blog__item-desc {
+  max-width: 408px;
+  color: #fff;
+  opacity: 0.5;
+}
+
+.slick-dots {
+  display: flex;
+  justify-content: center;
+}
+
+.slick-dots li+li {
+  margin-left: 15px;
+}
+
+.slick-dots .slick-active button {
+  background-color: #00b2a0;
+}
+
+.slick-dots button {
+  background-color: #fff;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  font-size: 0;
+  padding: 0;
+  border: none;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
