--- a/css/style.css
+++ b/css/style.css
@@ -217,7 +217,7 @@ body {
   margin-left: 10px;
 }
 
-.expertise__item--airplan{
+.expertise__item--airplan {
   width: 184px;
   margin-left: 84px;
   margin-bottom: 10px;
@@ -225,14 +225,14 @@ body {
   align-items: center;
 }
 
-.title__airplan{
+.title__airplan {
   font-weight: 400;
   font-size: 24px;
   line-height: 28px;
   margin-left: 10px;
 }
 
-.expertise__item--wave{
+.expertise__item--wave {
   width: 206px;
   margin-left: 72px;
   margin-bottom: 15px;
@@ -240,7 +240,7 @@ body {
   align-items: center;
 }
 
-.title__wave{
+.title__wave {
   font-weight: 400;
   font-size: 24px;
   line-height: 26px;
@@ -284,7 +284,7 @@ body {
   background-image: url('../images/magic-img.jpg');
   background-repeat: no-repeat;
   background-position: top right;
-  background-size: 1150px 850px;
+  background-size: 50%;
   padding: 200px 0 317px;
 }
 
@@ -323,7 +323,7 @@ body {
   line-height: 18px;
   letter-spacing: 0.6px;
   text-transform: uppercase;
-  margin-right: 20px; 
+  margin-right: 20px;
 }
 
 .mixitup-control-active {
@@ -420,6 +420,7 @@ portfolio__item-link {
   display: flex;
   justify-content: space-around;
 }
+
 .portfolio__numbers-item {
   text-align: center;
   font-weight: 700;
@@ -501,21 +502,33 @@ portfolio__item-link {
   border: none;
 }
 
+.team {
+  padding: 1px 0 204px;
+  background-color: #fff;
+}
 
+.team__title {
+  text-align: center;
+  margin-bottom: 212px;
+}
 
+.team__items {
+  display: flex;
+  justify-content: space-between;
+  text-align: center;
+}
 
+.team__name {
+  padding: 25px 0 5px;
+  font-family: 'Roboto Condensed', sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 18px;
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.team__position {
+  font-family: 'Roboto Condensed', sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 129%;
+}
